[package]
name = "bitcoin-payment-instructions"
version = "0.7.0"
authors = ["Matt Corallo", "Ben Carman"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-bitcoin/bitcoin-payment-instructions"
description = """
A parser for arbitrary bitcoin payment instructions.
"""
edition = "2021"

[package.metadata.docs.rs]
features = ["std", "http"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
http = ["bitreq", "std", "serde", "serde_json"]
http_proxied = [ "http", "bitreq/proxy" ]
std = ["dnssec-prover", "getrandom"]
default = ["std"]

[dependencies]
lightning-invoice = { version = "0.34", default-features = false }
lightning = { version = "0.2.0", default-features = false, features = ["dnssec"] }
bitcoin = { version = "0.32", default-features = false }
getrandom = { version = "0.3", default-features = false, optional = true }
dnssec-prover = { version = "0.6", default-features = false, optional = true, features = ["validation", "std", "tokio"] }
bitreq = { version = "0.2", default-features = false, optional = true, features = [ "async-https" ] }
serde = { version = "1.0", default-features = false, optional = true, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, optional = true, features = ["alloc"] }

[dev-dependencies]
tokio = { version = "1.0", default-features = false, features = ["rt", "macros"] }
lightning = { version = "0.2.0", features = ["std"] }
lightning-net-tokio = { version = "0.2.0", default-features = false }
